--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -5,3 +5,10 @@
 .dialogsItems .active{
     color : gold;
 }
+
+.img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1px solid black;
+}
